# Multi-class-image-segmentation

./: README.md  coco_val_subset.csv  process_data .py  pyproject.toml  split_data.py  train.ipynb
