[project]
name = "image-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pycocotools>=2.0.8",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
